postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres-service
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-statefulset
        image: postgres:14
        ports:
        - containerPort: 5432 
          name: psql-port
        volumeMounts:
        - name: psql-volume
          mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: psql-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
