postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-deployment
        image: postgres:14
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432 
          name: psql-port
        volumeMounts:
        - name: psql-volume
          mountPath: /var/lib/postgresql/data/pgdata
      volumes:
        - name: psql-volume
          persistentVolumeClaim:
            claimName: myclaim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres-deployment
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
