django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  labels:
    name: django-ingress
spec:
  rules:
  - host: django-kuber.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-service
            port: 
              number: 8080
